<resources>
    <string name="app_name">Video Downloader For Facebook</string>
    <string name="nav_open_drawer">Drawer Opened</string>
    <string name="nav_close_drawer">Drawer Closed</string>

    <string name="download">Download</string>
    <string name="downloadhq">Download video HD</string>
    <string name="play">Play video</string>
    <string name="share">Share video</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete video</string>
    <string name="info">Info video</string>

    <string name="network_connection">Network connection</string>
    <string name="not_connection">No network found, please check your setting and try again</string>
    <string name="choose_player">Choose Player</string>
    <string name="click_video">Click video to watch</string>
    <string name="downloading">Downloading...</string>
    <string name="video_downloading">Video downloading...</string>
    <string name="loading">Loading...</string>
    <string name="loading_video">Loading video</string>
    <string name="choose_option">Choose option</string>
    <string name="load_friend">Please be patient while we load all your friends, it may take a minute. Loaded</string>
    <string name="load_friend_2">Please be patient while we load all your friends, it may take a minute</string>
    <string name="load_video">Please be patient while we load all video, it may take a minute</string>
    <string name="friend">friends</string>
    <string name="loading_friends">Loading Friends</string>
    <string name="please_login_fb">Please login facebook</string>
    <string name="no_more_page">No more page found!</string>
    <string name="no_more_video">No more video found!</string>
    <string name="no_more_movie">No more movie found!</string>
    <string name="no_more_friend">No more friend found!</string>
    <string name="no_more_group">No more group found!</string>
    <string name="load_more">Load more</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_login_see_more">Please login to see more videos!</string>
    <string name="video_link_copy">Video link copied to clipboard</string>
    <string name="try_other_video">Oops! Try other videos!</string>
    <string name="download_successfully">Download video successfully</string>
    <string name="you_do_not_keyword">You did not enter search keywords</string>
    <string name="share_now">Share now</string>
    <string name="choose_language">Choose language</string>
    <string name="reset_app_for_apply">Reset app for apply change</string>
    <string name="are_you_sure">Are you sure want to logout facebook?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="not_found_link_hd">No found link HD video</string>
    <string name="no_support_download">No support download link video youtube and vimeo</string>
    <string name="not_download_video">Can not download this video</string>
    <string name="not_play_video">Unable to play this video</string>
    <string name="no_found_video_downloaded">No found video downloaded</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_delete_video">Are you sure want to delete the selected video?</string>
    <string name="delete_video_failed">Delete video failed</string>
    <string name="delete_video_success">Delete video success</string>
    <string name="title">Title</string>
    <string name="size">Size</string>
    <string name="save_as">Save as</string>
    <string name="download_location">Download location </string>
    <string name="video_downloaded">Video can be downloaded</string>
    <string name="are_you_exit_app">Are you exit app?</string>
    <string name="use_feature_login_web">To use this feature. Please login facebook by web. Are you want to login?</string>
    <string name="login_fb_while_logout">You do not login facebook. Please login facebook by web to use this feature</string>


    <string name="close_app">Exit </string>
    <string name="share_app">Share app </string>
    <string name="setting"> Setting </string>

    <string name="facebook_logout"> Facebook Logout </string>
    <string name="logout_from_facebook"> Logout From Facebook </string>
    <string name="language"> Language </string>
    <string name="change_language"> Change Language </string>
    <string name="change_your_current_language"> Change your current language </string>
    <string name="rate_us"> Rate Us </string>
    <string name="rate"> Rate GP Video Downloader </string>
    <string name="rate_detail"> Help us improve by rating us on Google play store </string>
    <string name="share_us"> Share Us </string>
    <string name="share_app_gp"> Share GP Video Downloader </string>
    <string name="share_detail"> Help us improve by share us on Google play store with everybody </string>
    <string name="destination"> Destination Directory </string>
    <string name="choose_destination"> Choose Your Destination </string>
    <string name="search_page"> Search Pages, Groups, Users </string>
    <string name="funny_page"> Funny Pages Videos </string>
    <string name="page_video"> Pages Video </string>
    <string name="group_video"> Groups Video </string>
    <string name="friend_video"> Friends Video </string>
    <string name="movie"> My Movies </string>
    <string name="movie_watch"> Movies Watched </string>
    <string name="video_share"> Videos Shared </string>
    <string name="video_like"> Videos Liked </string>
    <string name="video_save"> Videos Saved </string>
    <string name="video_watch"> Videos Watched </string>
    <string name="video_tagged"> Videos Tagged </string>
    <string name="video_upload"> Videos Uploaded </string>
    <string name="timeline"> Timeline Videos </string>
    <string name="post"> Posted Videos </string>
    <string name="newsfeed"> News Feed Videos </string>
    <string name="video_download"> Video Downloaded </string>
    <string name="browser"> Browser </string>
    <string name="no_video_found"> No videos found </string>
    <string name="no_movie_found"> No movies found </string>
    <string name="input_search"> Enter name pages, groups, user... </string>
    <string name="no_found_page"> No found page, group, user </string>
    <string name="download_video_as"> Download your video as: </string>
    <string name="name_video_download"> Name video download </string>
    <string name="copy_link"> Copy Link </string>
    <string name="no_friend_found"> No friend found </string>
    <string name="no_group_found"> No group found </string>
    <string name="no_page_found"> No page found </string>
    <string name="friend_use_app"> Friend Use App </string>
    <string name="gender"> Gender: </string>

    <string name="rating"> We are interested in what you think of the GP Video Downloader app. Tap the star above to rate it. </string>
    <string name="rating_header"> What do you think? </string>
    <string name="rating_later"> Maybe Later </string>
    <string name="rating_no"> Rate </string>
    <string name="quit">Quit GP Video Downloader</string>
    <string name="logout">Logout Facebook</string>
    <string name="notification"> Notification </string>


    <string name="facebook_app_id">1606573216314693</string>
    <string name="facebook_graph_id">145634995501895</string>
    <string name="client_secret">6169bf594764b6452d1e44e8eecbde50</string>
    <string name="redirect_uri">https://www.facebook.com/connect/login_success.html</string>
    <string name="youtube_api_key">AIzaSyAfH6DqYLr-dEntOE6OM1OjTCQVWih6wrQ</string>

</resources>
