<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite2"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/facebook_logout"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_from_facebook"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/facebook_logout"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp" />
            </LinearLayout>


            <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/language"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/btnLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_language"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/change_your_current_language"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp" />
            </LinearLayout>

            <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/rate_us"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/rate_detail"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp" />
            </LinearLayout>

            <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/share_us"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/btnShareApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_app_gp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/share_detail"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp" />
            </LinearLayout>

            <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/destination"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/btnChooseSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_destination"
                    android:textColor="@color/colorGray"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.example.datvit.facebookvideodownloader.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="/storage/emulated/0/GPVideoDownloader"
                    android:textColor="@color/colorGray"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>